@@ -2,13 +2,14 @@
 
 Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 
-(As of $Date: 2009-10-24 17:56:24 +0200 (Sat, 24 Oct 2009) $ $Revision: 879 $)
+(As of $Date: 2009-10-26 22:56:52 +0000 (Mon, 26 Oct 2009) $ $Revision: 882 $)
 
 =head2 Changes in Devel::NYTProf 2.11
 
 XXX subroutine profiler docs need update
 XXX note here and doc goto behaviour
 XXX OP_SUBSTCONT
+XXX should add test for embedded src code, incl string eval
 
   Note: The file format has changed. Old files can't be read.
 
@@ -17,6 +18,7 @@ XXX OP_SUBSTCONT
   Fixed risk of infinite recursion if trace enabled and
     $SIG{__WARN__} was set to a code reference.
   Fixed subroutine recursion depth measurement.
+  Fixed missing embedded eval source code for some older perls.
 
   Changed ReadStream SUB_LINE_RANGE tag to SUB_INFO.
 
